--- a/docs/PadroesDeProjeto/3.4.ParticipacoesPadroes.md
+++ b/docs/PadroesDeProjeto/3.4.ParticipacoesPadroes.md
@@ -9,6 +9,7 @@ Breve relato sobre as participações/contribuições de cada membro à entrega.
 | Artur Mendonça Arruda | 1. Implementação do código do Padrão Singleton no serviço de gerenciamento de tokens (TokenService). 2. Elaboração do diagrama UML do Singleton. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994) | Excelente | Registro nos Versionamentos do Documento de GoF Criacional, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.1.1Singleton.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/tokens/servicos/token_servico.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
 | Gabriel Lopes de Amorim | 1. Implementação do código do Padrão Singleton no serviço de gerenciamento de tokens (TokenService). 2. Elaboração do diagrama UML do Singleton. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994) | Excelente | Registro nos Versionamentos do Documento de GoF Criacional, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.1.1Singleton.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/tokens/servicos/token_servico.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
 | Lucas Mendonça Arruda | 1. Implementação do código do Padrão Singleton no serviço de gerenciamento de tokens (TokenService). 2. Elaboração do diagrama UML do Singleton. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994) | Excelente | Registro nos Versionamentos do Documento de GoF Criacional, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.1.1Singleton.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/tokens/servicos/token_servico.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
+| Lucas de Oliveira Dias Marques Ferreira | 1. Implementação do código do Padrão Observer. 2. Elaboração do diagrama UML do Observer. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994) | Excelente | Registro nos Versionamentos do Documento de GoF Criacional, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/Padr%C3%A3o%20de%20Projeto_%20Observer.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/Padr%C3%A3o%20de%20Projeto_%20Observer.md), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/Padr%C3%A3o%20de%20Projeto_%20Observer.md). |
 
 
 ## Padrão GoF Estrutural
@@ -18,6 +19,7 @@ Breve relato sobre as participações/contribuições de cada membro à entrega.
 | Artur Mendonça Arruda | 1. Implementação do código do Padrão Decorator (AcaoDecorator, LogDecorator, BonusDecorator). 2. Elaboração do diagrama UML do Decorator. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994). | Excelente | Registro nos Versionamentos do Documento de GoF Estrutural, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.2.2.Decorador.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/decoradores/decorador_base.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
 | Gabriel Lopes de Amorim | 1. Implementação do código do Padrão Decorator (AcaoDecorator, LogDecorator, BonusDecorator). 2. Elaboração do diagrama UML do Decorator. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994). | Excelente | Registro nos Versionamentos do Documento de GoF Estrutural, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.2.2.Decorador.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/decoradores/decorador_base.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
 | Lucas Mendonça Arruda | 1. Implementação do código do Padrão Decorator (AcaoDecorator, LogDecorator, BonusDecorator). 2. Elaboração do diagrama UML do Decorator. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994). | Excelente | Registro nos Versionamentos do Documento de GoF Estrutural, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.2.2.Decorador.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/decoradores/decorador_base.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
+| Lucas de Oliveira Dias Marques Ferreira | 1. Implementação do código do Padrão Facade. 2. Elaboração do diagrama UML do Facade. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994). | Excelente | Registro nos Versionamentos do Documento de GoF Estrutural, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/Padr%C3%A3o%20de%20Projeto_%20Facade.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/Padr%C3%A3o%20de%20Projeto_%20Facade.md), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/Padr%C3%A3o%20de%20Projeto_%20Facade.md). |
 
 ## Padrão GoF Comportamental
 
@@ -26,3 +28,4 @@ Breve relato sobre as participações/contribuições de cada membro à entrega.
 | Artur Mendonça Arruda | 1. Implementação do código do Padrão Strategy (TokenStrategy, ReciclagemStrategy, TransporteStrategy, EconomiaRecursosStrategy, DescarteCorretoStrategy, PlantioArvoreStrategy). 2. Elaboração do diagrama UML do Strategy. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994). | Excelente | Registro nos Versionamentos do Documento de GoF Estrutural, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.3.3Strategy.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/tokens/servicos/token_strategy.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
 | Gabriel Lopes de Amorim | 1. Implementação do código do Padrão Strategy (TokenStrategy, ReciclagemStrategy, TransporteStrategy, EconomiaRecursosStrategy, DescarteCorretoStrategy, PlantioArvoreStrategy). 2. Elaboração do diagrama UML do Strategy. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994). | Excelente | Registro nos Versionamentos do Documento de GoF Estrutural, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.3.3Strategy.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/tokens/servicos/token_strategy.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
 | Lucas Mendonça Arruda | 1. Implementação do código do Padrão Strategy (TokenStrategy, ReciclagemStrategy, TransporteStrategy, EconomiaRecursosStrategy, DescarteCorretoStrategy, PlantioArvoreStrategy). 2. Elaboração do diagrama UML do Strategy. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994). | Excelente | Registro nos Versionamentos do Documento de GoF Estrutural, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.3.3Strategy.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/tokens/servicos/token_strategy.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
+| Lucas de Oliveira Dias Marques Ferreira | 1. Implementação do código do Padrão Factory Method). 2. Elaboração do diagrama UML do Factory Method. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994). | Excelente | Registro nos Versionamentos do Documento de GoF Estrutural, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/Padr%C3%A3o%20de%20Projeto_%20Factory%20Method.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/Padr%C3%A3o%20de%20Projeto_%20Factory%20Method.md), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/Padr%C3%A3o%20de%20Projeto_%20Factory%20Method.md). |
