Add participação no comprobatorio e add dirgarma do template method

--- a/docs/PadroesDeProjeto/3.4.ParticipacoesPadroes.md
+++ b/docs/PadroesDeProjeto/3.4.ParticipacoesPadroes.md
@@ -10,6 +10,7 @@ Breve relato sobre as participações/contribuições de cada membro à entrega.
 | Gabriel Lopes de Amorim | 1. Implementação do código do Padrão Singleton no serviço de gerenciamento de tokens (TokenService). 2. Elaboração do diagrama UML do Singleton. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994) | Excelente | Registro nos Versionamentos do Documento de GoF Criacional, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.1.1Singleton.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/tokens/servicos/token_servico.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
 | Lucas Mendonça Arruda | 1. Implementação do código do Padrão Singleton no serviço de gerenciamento de tokens (TokenService). 2. Elaboração do diagrama UML do Singleton. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994) | Excelente | Registro nos Versionamentos do Documento de GoF Criacional, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.1.1Singleton.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/tokens/servicos/token_servico.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
 | Gustavo Gontijo Lima | 1. Implementação do código do Padrão Abstract Factory. 2. Elaboração do diagrama UML. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos | Excelente | Registro nos Versionamentos do Documento de GoF Criacional, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.1.3.AbstractMethod.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/abstract_factory/servicos/EnergySavingFactory.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/abstract_factory/management/commands/registrar_fabrica.py). |
+| Davi Emanuel Ribeiro De Oliveira | 1. Implementação do código do Padrão Abstract Factory. 2. Elaboração do diagrama UML. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos | Excelente | Registro nos Versionamentos do Documento de GoF Criacional, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.1.3.AbstractMethod.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/abstract_factory/servicos/EnergySavingFactory.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/abstract_factory/management/commands/registrar_fabrica.py). |
 
 
 ## Padrão GoF Estrutural
@@ -20,6 +21,8 @@ Breve relato sobre as participações/contribuições de cada membro à entrega.
 | Gabriel Lopes de Amorim | 1. Implementação do código do Padrão Decorator (AcaoDecorator, LogDecorator, BonusDecorator). 2. Elaboração do diagrama UML do Decorator. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994). | Excelente | Registro nos Versionamentos do Documento de GoF Estrutural, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.2.2.Decorador.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/decoradores/decorador_base.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
 | Lucas Mendonça Arruda | 1. Implementação do código do Padrão Decorator (AcaoDecorator, LogDecorator, BonusDecorator). 2. Elaboração do diagrama UML do Decorator. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994). | Excelente | Registro nos Versionamentos do Documento de GoF Estrutural, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.2.2.Decorador.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/decoradores/decorador_base.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
 | Gustavo Gontijo Lima | 1. Implementação do código do Padrão Proxy. 2. Elaboração do diagrama UML. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos | Excelente | Registro nos Versionamentos do Documento de GoF Criacional, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.2.1.Proxy..md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/actions/servicos/AcaoProxy.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_proxy_gof_standalone.py). |
+| Davi Emanuel Ribeiro de Oliveira | 1. Implementação do código do Padrão Proxy. 2. Elaboração do diagrama UML. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos | Excelente | Registro nos Versionamentos do Documento de GoF Criacional, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.2.1.Proxy..md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/actions/servicos/AcaoProxy.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_proxy_gof_standalone.py). |
+
 
 ## Padrão GoF Comportamental
 
@@ -29,3 +32,4 @@ Breve relato sobre as participações/contribuições de cada membro à entrega.
 | Gabriel Lopes de Amorim | 1. Implementação do código do Padrão Strategy (TokenStrategy, ReciclagemStrategy, TransporteStrategy, EconomiaRecursosStrategy, DescarteCorretoStrategy, PlantioArvoreStrategy). 2. Elaboração do diagrama UML do Strategy. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994). | Excelente | Registro nos Versionamentos do Documento de GoF Estrutural, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.3.3Strategy.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/tokens/servicos/token_strategy.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
 | Lucas Mendonça Arruda | 1. Implementação do código do Padrão Strategy (TokenStrategy, ReciclagemStrategy, TransporteStrategy, EconomiaRecursosStrategy, DescarteCorretoStrategy, PlantioArvoreStrategy). 2. Elaboração do diagrama UML do Strategy. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994). | Excelente | Registro nos Versionamentos do Documento de GoF Estrutural, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.3.3Strategy.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/tokens/servicos/token_strategy.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
 | Gustavo Gontijo Lima | 1. Implementação do código do Padrão Template Method. 2. Elaboração do diagrama UML. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos | Excelente | Registro nos Versionamentos do Documento de GoF Criacional, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.3.1.TemplateMethod.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/consumo/servicos/consumo_template.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/consumo/servicos/consumo_template.py). |
+| Davi Emanuel Ribeiro de Oliveira | 1. Implementação do código do Padrão Template Method. 2. Elaboração do diagrama UML. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos | Excelente | Registro nos Versionamentos do Documento de GoF Criacional, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.3.1.TemplateMethod.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/consumo/servicos/consumo_template.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/consumo/servicos/consumo_template.py). |
