fix: realizando ajustes

--- a/docs/PadroesDeProjeto/3.1.1Singleton.md
+++ b/docs/PadroesDeProjeto/3.1.1Singleton.md
@@ -10,7 +10,7 @@ Para implementar o serviço de gerenciamento de tokens utilizando o padrão Sing
 
 Seguindo esses diagramas, o grupo manteve a consistência da arquitetura planejada, posicionando a implementação do padrão Singleton dentro da estrutura de pastas **`App/tokens`**, conforme definido na modelagem anterior. A escolha do ambiente Django também seguiu as recomendações do [Diagrama de Implantação](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_02/blob/main/docs/Modelagem/2.1.3.DiagramaImplantacao.md), definindo de fato o framework de desenvolvimento do projeto.
 
-O diagrama do Singleton foi desenvolvido pelos integrantes responsáveis com base nos materiais da professora, como slides e vídeo-aulas, no livro Design Patterns: Elements of Reusable Object-Oriented Software e na interpretação direta do código-fonte da classe TokenService. Essa abordagem pós-implementação foi adotada para garantir que o diagrama refletisse a estrutura real da aplicação. A existência do código facilitou a modelagem do diagrama, tornando o processo mais ágil e fornecendo uma referência confiável para validação futura e para entregas subsequentes que necessitem analisar ou estender o serviço de tokens.
+O diagrama do Singleton foi desenvolvido pelos integrantes responsáveis com base nos materiais da professora, como slides e vídeo-aulas, no livro Design Patterns: Elements of Reusable Object-Oriented Software e na interpretação direta do código-fonte da classe TokenService.
 
 ## 3. Singleton implementado no projeto
 
