--- a/docs/PadroesDeProjeto/3.2.2.Decorador.md
+++ b/docs/PadroesDeProjeto/3.2.2.Decorador.md
@@ -144,6 +144,8 @@ Ademais, o diagrama e os testes do Decorator, construídos a partir da interpret
 
 ## Referências Bibliográficas
 
+![livro Design Patterns](../assets/decorator.png)
+
 ## Bibliografia
 
 SERRANO, Milene. Arquitetura e Desenho de Software
